force-app/main/default/objects/NAT_Class_Type_Setting__mdt/NAT_Class_Type_Setting__mdt.object-meta.xml
<CustomObject>
    <label>NAT Class Type Setting</label>
    <pluralLabel>NAT Class Type Settings</pluralLabel>
</CustomObject>