force-app/main/default/objects/NAT_Class_Type_Setting__mdt/fields/Backgroun_Color__c.field-meta.xml
<CustomField>
    <fullName>Backgroun_Color__c</fullName>
    <label>Backgroun Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>