force-app/main/default/objects/NAT_Class_Type_Setting__mdt/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orientation</fullName>
                <default>true</default>
                <label>Orientation</label>
            </value>
            <value>
                <fullName>CPR</fullName>
            </value>
            <value>
                <fullName>Theory</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Make Up</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Review Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>