force-app/main/default/objects/NAT_Class_Type_Setting__mdt/fields/Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Text_Color__c</fullName>
    <label>Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>